# spring-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh.md
.github/workflows/: clippy.yaml  docs.yaml  publish.yaml  test-coverage.yaml
autumn/: Cargo.toml
autumn-actuator/: Cargo.toml
autumn-actuator/src/: extractor.rs  lib.rs
autumn-boot/: Cargo.toml
autumn-boot-actuator/: Cargo.toml
autumn-boot-job/: Cargo.toml
autumn-boot-job/src/: lib.rs
autumn-boot-macro/: Cargo.toml
autumn-boot-mail/: Cargo.toml
autumn-boot-mail/src/: config.rs  lib.rs
autumn-boot-redis/: Cargo.toml
autumn-boot-redis/src/: config.rs  lib.rs
autumn-boot-schedule/: Cargo.toml
autumn-boot-sea-orm/: Cargo.toml
autumn-boot-sea-orm/src/: config.rs  lib.rs
autumn-boot-sea-streamer/: Cargo.toml
autumn-boot-sqlx/: Cargo.toml
autumn-boot-sqlx/src/: config.rs  lib.rs
autumn-boot-web/: Cargo.toml
autumn-boot-web/src/: config.rs  error.rs  extractor.rs  lib.rs
autumn-boot/src/: app.rs  error.rs  lib.rs
autumn-boot/src/config/: env.rs  mod.rs
autumn-boot/src/log/: mod.rs
autumn-boot/src/plugin/: component.rs  mod.rs
autumn-job/: Cargo.toml
autumn-job/src/: extractor.rs  handler.rs  job.rs  lib.rs
autumn-macros/: Cargo.toml
autumn-macros/src/: job.rs  lib.rs  nest.rs  route.rs
autumn-mail/: Cargo.toml
autumn-mail/src/: lib.rs
autumn-redis/: Cargo.toml
autumn-redis/src/: config.rs  lib.rs
autumn-sea-orm/: Cargo.toml
autumn-sea-orm/src/: lib.rs
autumn-sea-streamer/: Cargo.toml
autumn-sea-streamer/src/: lib.rs
autumn-sqlx/: Cargo.toml
autumn-sqlx/src/: lib.rs
autumn-web/: Cargo.toml
autumn-web/src/: extractor.rs  handler.rs  lib.rs  response.rs
autumn/src/: lib.rs
contrib-plugins/: README.md  README.zh.md
contrib-plugins/spring-opendal/: Cargo.toml  build.rs
docs/: config.toml
docs/content/: _index.md  _index.zh.md
docs/static/: site.webmanifest
docs/templates/: index.html
examples/actuator/: Cargo.toml
examples/actuator-example/: Cargo.toml
examples/apalis-redis-demo/: Cargo.toml
examples/apalis-redis-example/: Cargo.toml
examples/circular-dependency-injection-example/: Cargo.toml  README.md
examples/component-macro-example/: Cargo.toml
examples/dependency-inject-example/: Cargo.toml
examples/diesel-orm-example/: Cargo.toml  README.MD
examples/grpc-example/: Cargo.toml  READMD.md
examples/hello-world-example/: Cargo.toml
examples/hot-reloading/: Cargo.toml  README.md  compose.yml
examples/job/: Cargo.toml  compose.yaml
examples/job-example/: .env  Cargo.toml
examples/mail/: Cargo.toml
examples/mail-example/: Cargo.toml
examples/multi-datasource-example/: .env  Cargo.toml
examples/nested-dependency-injection-example/: Cargo.toml
examples/openai-example/: Cargo.toml
examples/openapi-example/: Cargo.toml  README.md  compose.yaml
spring/: CHANGELOG.md  COMPONENT_MACRO.md  COMPONENT_MACRO.zh.md  Cargo.toml  Config.md  Config.zh.md  DI.md  DI.zh.md  Log-Plugin.md  Log-Plugin.zh.md  Plugin.md  Plugin.zh.md  README.md  README.zh.md
spring-actuator/: Cargo.toml
spring-actuator/src/: extractor.rs  lib.rs
spring-apalis/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-apalis/src/: lib.rs
spring-boot/: Cargo.toml  Log-Plugin.md  Log-Plugin.zh.md  README.md  README.zh.md
spring-boot/src/: app.rs  lib.rs
spring-boot/src/config/: env.rs  mod.rs
spring-boot/src/log/: config.rs  mod.rs
spring-boot/src/plugin/: component.rs  mod.rs
spring-cache/: Cargo.toml
spring-cache/src/: lib.rs  moka.rs  redis.rs
spring-diesel-orm/: Cargo.toml  README.MD
spring-diesel-orm/src/: config.rs  lib.rs
spring-grpc/: CHANGELOG.md  Cargo.toml  READMD.zh.md  README.md  README.zh.md
spring-grpc/src/: config.rs  lib.rs
spring-job/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-job/src/: extractor.rs  handler.rs  job.rs  lib.rs
spring-job/tests/: job_test.rs
spring-macros/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-macros/src/: auto.rs  cache.rs  config.rs  http_status_code.rs  inject.rs  job.rs  lib.rs  middlewares.rs  nest.rs  problem_details.rs  route.rs  sa_token.rs  socketioxide.rs  stream.rs  utils.rs
spring-macros/src/component/: attrs.rs  codegen.rs  dependency.rs  mod.rs  utils.rs  validation.rs
spring-macros/src/route/: openapi.rs
spring-mail/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-mail/src/: config.rs  lib.rs
spring-openai/: Cargo.toml
spring-openai/src/: config.rs  lib.rs
spring-opendal/: Cargo.toml  README.md  README.zh.md  build.rs
spring-opendal/src/: config.rs  lib.rs
spring-opendal/tests/layers/: blocking.rs
spring-opentelemetry/: CHANGELOG  Cargo.toml  README.md  README.zh.md
spring-opentelemetry/src/: config.rs  lib.rs  metrics.rs  trace.rs
spring-opentelemetry/src/middlewares/: tracing.rs
spring-opentelemetry/src/trace/: grpc.rs  http.rs
spring-opentelemetry/src/util/: http.rs
spring-postgres/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-postgres/src/: config.rs  lib.rs
spring-redis/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-redis/src/: config.rs  lib.rs
spring-redis/tests/: config_test.rs
spring-sa-token/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-sa-token/src/: config.rs  configurator.rs  custom_storage.rs  lib.rs  prelude.rs  storage.rs
spring-sa-token/tests/: config_test.rs  integration_test.rs
spring-sea-orm/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-sea-orm/src/: config.rs  lib.rs  pagination.rs
spring-sea-streamer/: Cargo.toml
spring-sea-streamer/src/: lib.rs
spring-sea-streamer/src/config/: kafka.rs  mod.rs  redis.rs
spring-sqlx/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-sqlx/src/: config.rs  lib.rs
spring-sqlx/tests/: config_test.rs
spring-stream/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-web/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
spring-websocket/: Cargo.toml  README.md  README.zh.md
(+281 files in other folders)
