[workspace]
resolver = "2"
members = [
    "spring",
    "spring-macros",
    "spring-web",
    "spring-grpc",
    "spring-job",
    "spring-redis",
    "spring-sqlx",
    "spring-postgres",
    "spring-sea-orm",
    "spring-stream",
    "spring-mail",
    "spring-opentelemetry",
    "spring-opendal",
    "examples/*",
]
default-members = ["spring", "spring-*"]
exclude = ["examples/**"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/spring-rs/spring-rs"

[workspace.dependencies]
aide = "0.15"
anyhow = "1.0"
async-trait = "0.1.81"
axum = "0.8"
byte-unit = "5.1"
chrono = "0.4"
dashmap = "6.1"
dotenvy = "0.15.7"
futures-util = "0.3"
http = "1"
http-body = "1"
inventory = "0.3.15"
lettre = "0.11"
log = "0.4"
nu-ansi-term = "0.50"
once_cell = "1"
opendal = "0.54"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-appender-tracing = "0.30"
opentelemetry-http = "0.30"
opentelemetry-jaeger-propagator = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry-prometheus = "0.30"
opentelemetry-resource-detectors = "0.9"
opentelemetry-semantic-conventions = "0.30"
opentelemetry-zipkin = "0.30"
pin-project = "1"
proc-macro2 = "1.0"
prometheus = "0.14"
prometheus-client = "0.23"
prost = "0.13"
quote = "1.0"
redis = "0.32"
schemars = "0.9"
sea-orm = "1.1"
sea-streamer = "0.5"
serde = "1.0"
serde_json = "1.0"
serde-toml-merge = "0.3.10"
sqlx = "0.8"
syn = "2.0"
thiserror = "2.0"
tokio = "1.47"
tokio-cron-scheduler = "0.14"
tokio-postgres = "0.7"
toml = "0.9"
tonic = "0.13"
tower = "0.5"
tower-http = "0.6"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"
uuid = "1"
