[workspace]
resolver = "2"
members = [
    "spring",
    "spring-macros",
    "spring-web",
    "spring-grpc",
    "spring-job",
    "spring-redis",
    "spring-sqlx",
    "spring-postgres",
    "spring-sea-orm",
    "spring-stream",
    "spring-mail",
    "spring-opentelemetry",
    "spring-opendal",
    "spring-apalis",
    "examples/*",
]
default-members = ["spring", "spring-*"]
exclude = ["examples/**"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/spring-rs/spring-rs"

[workspace.dependencies]
aide = "0.16.0-alpha.1"
anyhow = "1.0"
apalis = "1.0.0-rc.2"
apalis-redis = "1.0.0-rc.2"
apalis-amqp = "1.0.0-rc.2"
apalis-postgres = "1.0.0-rc.2"
apalis-mysql = "1.0.0-rc.2"
apalis-sqlite = "1.0.0-rc.2"
apalis-workflow = "0.1.0-rc.2"
apalis-cron = "1.0.0-rc.2"
apalis-board = "1.0.0-rc.1"
async-trait = "0.1.81"
axum = "0.8"
byte-unit = "5.1"
chrono = "0.4"
dashmap = "6.1"
dotenvy = "0.15.7"
futures-util = "0.3"
http = "1"
http-body = "1"
indexmap = "2.0"
inventory = "0.3.15"
lettre = "0.11"
log = "0.4"
nu-ansi-term = "0.50"
opendal = "0.54"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-http = "0.31"
opentelemetry-jaeger-propagator = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-prometheus = "0.29"
opentelemetry-resource-detectors = "0.10"
opentelemetry-semantic-conventions = "0.31"
opentelemetry-zipkin = "0.31"
pin-project = "1"
proc-macro2 = "1.0"
prometheus = "0.14"
prometheus-client = "0.23"
prost = "0.13"
quote = "1.0"
redis = "0.32"
rmpv = "1.3"
schemars = "1.1"
sea-orm = "1.1"
sea-streamer = "0.5"
serde = "1.0"
serde_json = "1.0"
serde-toml-merge = "0.3.10"
socketioxide = "0.17.2"
sqlx = "0.8"
syn = "2.0"
thiserror = "2.0"
tokio = "1.47"
tokio-cron-scheduler = "0.15"
tokio-postgres = "0.7"
toml = "0.9"
tonic = "0.13"
tower = "0.5"
tower-http = "0.6"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"
uuid = "1"
