[package]
name = "autumn-actuator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autumn-boot = { path = "../autumn-boot" }
autumn-web = { path = "../autumn-web" }
tracing = { workspace = true, features = ["log"] }
async-trait = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }