[package]
name = "autumn-boot-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autumn-boot = { path = "../autumn-boot" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
async-trait = { workspace = true }
redis = { workspace = true, features = ["connection-manager", "tokio-comp"] }
schemars = { workspace = true }