[package]
name = "autumn-boot"
version = "0.0.0"
edition = "2021"
authors = ["holmofy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
inventory = "0.3.15"
dotenvy = "0.15.7"
toml = { version = "0.8.14", features = ["parse"], default-features = false }
thiserror = "1.0.62"
serde = "1.0"
serde-toml-merge = "0.3.8"
