[package]
name = "autumn-job"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
autumn-boot = { path = "../autumn-boot" }
tokio-cron-scheduler = { workspace = true, features = ["signal"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
