[package]
name = "spring-apalis"
description = "Integration of rust application framework spring-rs and apalis"
version = "0.4.2"
categories = ["date-and-time"]
keywords = ["cron-scheduler", "task-scheduling", "cron-job", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
full = ["apalis/full"]
redis = ["apalis-redis", "spring-redis"]
amqp = ["apalis-amqp"]
sql-postgres = ["apalis-postgres", "spring-sqlx"]
sql-sqlite = ["apalis-sqlite", "spring-sqlx"]
sql-mysql = ["apalis-mysql", "spring-sqlx"]
workflow = ["apalis-workflow"]
board = ["apalis-board"]
board-web = ["apalis-board/web"]

[dependencies]
spring = { path = "../spring", version = "0.4" }
tower-service = { workspace = true }
tower-layer = { workspace = true }
tokio = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true, optional = true }
apalis-amqp = { workspace = true, optional = true }
apalis-postgres = { workspace = true, optional = true, features = ["time"] }
apalis-sqlite = { workspace = true, optional = true, features = ["time"] }
apalis-mysql = { workspace = true, optional = true, features = ["time"] }
apalis-workflow = { workspace = true, optional = true }
apalis-board = { workspace = true, optional = true, features = ["axum"] }
spring-redis = { path = "../spring-redis", version = "0.4", optional = true }
spring-sqlx = { path = "../spring-sqlx", version = "0.4", optional = true }
