[package]
name = "spring-boot"
description = "rust microservice framework like spring boot in java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring-macros = { path = "../spring-macros", version = "0.0.5" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }
inventory = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true, features = ["parse"] }
serde-toml-merge = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }

[features]
default = []
