[package]
name = "spring-boot"
description = "Rust microservice framework like spring boot in java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring-macros = { path = "../spring-macros", version = "0.0.6" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "tracing-log",
] }
inventory = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true, features = ["parse"] }
serde-toml-merge = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }

[features]
default = []
