[package]
name = "spring-grpc"
description = "Integration of rust application framework spring-rs and tonic gRPC framework"
version = "0.3.0"
categories = ["web-programming", "network-programming"]
keywords = ["rpc", "grpc", "protobuf", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]

[dependencies]
spring = { path = "../spring", version = "0.3" }
spring-macros = { path = "../spring-macros", version = "0.3" }
tonic = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
schemars = { workspace = true }
inventory = { workspace = true }
