[package]
name = "spring-job"
description = "rust microservice framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring = { path = "../spring", version = "0.1.4" }
spring-macros = { path = "../spring-macros", version = "0.1.1" }
tokio-cron-scheduler = { workspace = true, features = ["signal"] }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, features = ["log"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
inventory = { workspace = true }