[package]
name = "spring-job"
description = "Integrate tokio-cron-scheduler with spring-rs framework"
version = "0.4.6"
categories = ["date-and-time"]
keywords = ["cron-scheduler", "task-scheduling", "cron-job", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
postgres_storage = ["tokio-cron-scheduler/postgres_storage"]
nats_storage = ["tokio-cron-scheduler/nats_storage"]

[dependencies]
spring = { path = "../spring", version = "0.4" }
spring-macros = { path = "../spring-macros", version = "0.4" }
tokio-cron-scheduler = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
inventory = { workspace = true }
