[package]
name = "spring-macros"
description = "rust microservice framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { workspace = true }
spring = { path = "../spring", version = "0.1.1" }
spring-web = { path = "../spring-web", version = "0.1.1" }
spring-job = { path = "../spring-job", version = "0.1.1" }
