[package]
name = "spring-macros"
description = "spring-rs Procedural Macros implementation"
version = "0.3.0"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["procedural-macro-helpers", "web", "cron", "stream", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { workspace = true }
spring = { path = "../spring" }
spring-web = { path = "../spring-web" }
spring-job = { path = "../spring-job" }
