[package]
name = "spring-macros"
description = "spring-rs Procedural Macros implementation"
version = "0.4.11"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["proc-macro", "web", "cron", "stream", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
socket_io = ["spring-web/socket_io"]
sa-token = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { workspace = true }
spring = { path = "../spring" }
spring-web = { path = "../spring-web", features = ["openapi"] }
spring-job = { path = "../spring-job" }
spring-redis = { path = "../spring-redis" }
serde = { workspace = true }
serde_json = { workspace = true }