[package]
name = "spring-mail"
description = "Rust microservice framework"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lettre = { workspace = true, features = ["tokio1-native-tls", "serde"] }
spring = { path = "../spring", version = "0.2.0" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }

[dev-dependencies]
spring-web = { path = "../spring-web" }
