[package]
name = "spring-mail"
description = "Integrate lettre into spring-rs to send emails"
version = "0.2.1"
categories = ["email"]
keywords = ["email", "smtp", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lettre = { workspace = true, features = ["tokio1-native-tls", "serde"] }
spring = { path = "../spring", version = "0.2" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }

[dev-dependencies]
spring-web = { path = "../spring-web" }
