[package]
name = "spring-opendal"
description = ""
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Lemon"]

[dependencies]
spring-boot = { path = "../spring-boot", version = "0.0.6" }
opendal = { version = "0.49.1", default-features = true }
serde = "1.0"
schemars = "0.8.21"
anyhow = "1.0"

[features]
services-all = [
    "services-azblob",
    "services-azdls",
    "services-cos",
    "services-fs",
    "services-gcs",
    "services-ghac",
    "services-http",
    "services-ipmfs",
    "services-memory",
    "services-obs",
    "services-oss",
    "services-s3",
    "services-webdav",
    "services-webhdfs",
    "services-aliyun-drive",
    "services-alluxio",
    "services-azfile",
    "services-cacache",
    "services-chainsafe",
    "services-dashmap",
    "services-dropbox",
    "services-etcd",
    "services-foundationdb",
    "services-ftp",
    "services-gdrive",
    "services-hdfs",
    "services-huggingface",
    "services-ipfs",
    "services-memcached",
    "services-mini-moka",
    "services-moka",
    "services-onedrive",
    "services-persy",
    "services-postgresql",
    "services-mysql",
    "services-redb",
    "services-redis",
    "services-rocksdb",
    "services-sled",
    "services-supabase",
    "services-swift",
    "services-tikv",
    "services-vercel-artifacts",
    "services-mongodb",
    "services-gridfs",
    "services-sqlite",
    "services-libsql",
    "services-alluxio",
    "services-b2",
    "services-seafile",
    "services-upyun",
    "services-koofr",
    "services-yandex-disk",
]

# Default services provided by opendal.
services-aliyun-drive = ["opendal/services-aliyun-drive"]
services-azblob = ["opendal/services-azblob"]
services-azdls = ["opendal/services-azdls"]
services-chainsafe = ["opendal/services-chainsafe"]
services-cos = ["opendal/services-cos"]
services-fs = ["opendal/services-fs"]
services-gcs = ["opendal/services-gcs"]
services-ghac = ["opendal/services-ghac"]
services-http = ["opendal/services-http"]
services-ipmfs = ["opendal/services-ipmfs"]
services-memory = ["opendal/services-memory"]
services-obs = ["opendal/services-obs"]
services-oss = ["opendal/services-oss"]
services-s3 = ["opendal/services-s3"]
services-webdav = ["opendal/services-webdav"]
services-webhdfs = ["opendal/services-webhdfs"]

# Optional services provided by opendal.
services-alluxio = ["opendal/services-alluxio"]
services-azfile = ["opendal/services-azfile"]
services-b2 = ["opendal/services-b2"]
services-cacache = ["opendal/services-cacache"]
services-dashmap = ["opendal/services-dashmap"]
services-dropbox = ["opendal/services-dropbox"]
services-etcd = ["opendal/services-etcd"]
services-foundationdb = ["opendal/services-foundationdb"]
services-ftp = ["opendal/services-ftp"]
services-gdrive = ["opendal/services-gdrive"]
services-gridfs = ["opendal/services-gridfs"]
services-hdfs = ["opendal/services-hdfs"]
services-huggingface = ["opendal/services-huggingface"]
services-ipfs = ["opendal/services-ipfs"]
services-koofr = ["opendal/services-koofr"]
services-libsql = ["opendal/services-libsql"]
services-memcached = ["opendal/services-memcached"]
services-mini-moka = ["opendal/services-mini-moka"]
services-moka = ["opendal/services-moka"]
services-mongodb = ["opendal/services-mongodb"]
services-mysql = ["opendal/services-mysql"]
services-onedrive = ["opendal/services-onedrive"]
services-persy = ["opendal/services-persy"]
services-postgresql = ["opendal/services-postgresql"]
services-redb = ["opendal/services-redb"]
services-redis = ["opendal/services-redis"]
services-rocksdb = ["opendal/services-rocksdb"]
services-seafile = ["opendal/services-seafile"]
services-sftp = ["opendal/services-sftp"]
services-sled = ["opendal/services-sled"]
services-sqlite = ["opendal/services-sqlite"]
services-supabase = ["opendal/services-supabase"]
services-swift = ["opendal/services-swift"]
services-tikv = ["opendal/services-tikv"]
services-upyun = ["opendal/services-upyun"]
services-vercel-artifacts = ["opendal/services-vercel-artifacts"]
services-yandex-disk = ["opendal/services-yandex-disk"]
